Playing PLC like you're Tehrozer now causes your country to implode :)

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -197,9 +197,9 @@ plcommon.10.t:0 "Doboszynski's coup!"
 plcommon.10.d:0 "After our refusal to their demands, the Polish nationalists have made an attempt to take power into their hands. Only our armed forces can save us now...."
 plcommon.10.a:0 "Doboszynski's coup was a success!"
 plcommon.10.b:0 "The armed forces crushed this rebellion!"
-plcommon.11.t:0 "New government"
-plcommon.11.d:0 "The National-Radical Party took power in the Commonwealth and restored Poland."
-plcommon.11.a:0 "Okay"
+plcommon.11.t:0 "New Government"
+plcommon.11.d:0 "The National-Radical Party took power in the Commonwealth and has restored Poland."
+plcommon.11.a:0 "Okay."
 plcommon.12.t:0 "Nationalists takeover in the Commonwealth!"
 plcommon.12.d:0 "Today the rightful King of the Commonwealth of Poland and Lithuania, Mindaugas III, was captured by Adam Doboszynski and his Polish nationalist henchmen. Doboszynski officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
 plcommon.12.a:0 "There is nothing we can do..."
@@ -327,3 +327,33 @@ plcommon.39.a:0 "This time we will win!"
 plcommon.40.t:0 "Anniversary of the Lublin Union"
 plcommon.40.d:0 "Today we celebrate the anniversary of the signature of the Lublin Union, which, for the first time in history, created a united Polish-Lithuanian state."
 plcommon.40.a:0 "Commonwealth is Eternal"
+plcommon.41.t:0 "Lithuania Rebels!"
+plcommon.41.d:0 "After our increasingly anti-Lithuanian policies led to the effective dissolution of the Commonwealth, the Lithuanians have been fmuing under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of antion dominated by Polish oppressors, and have declared their total independence!"
+plcommon.41.a:0 "They will die for this!"
+plcommon.42.t:0 "Poland Rebels!"
+plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fmuing under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of antion dominated by Lithuanian oppressors, and have declared their total independence!"
+plcommon.42.a:0 "They will die for this!"
+plcommon.43.t:0 "Voldemaras' Army"
+plcommon.43.d:0 "to-do"
+plcommon.43.a:0 "Disband them immdeiately!"
+plcommon.44.t:0 "The LPIT"
+plcommon.44.d:0 "to-do"
+plcommon.44.a:0 "This is very troubling."
+plcommon.45.t:0 "The LPIT Demands Control"
+plcommon.45.d:0 "to-do"
+plcommon.45.a:0 "We must give in."
+plcommon.45.b:0 "Never!"
+plcommon.46.t:0 "Voldemaras' Coup"
+plcommon.46.d:0 "to-do"
+plcommon.46.a:0 "The coup succeeds."
+plcommon.46.b:0 "Hold them back!"
+plcommon.47.t:0 "Lithuanian Nationalists Sieze the Commonwealth!"
+plcommon.47.d:0 "Earlier today, the Lithuanian Nationalist LTIP Party siezed control of the government of the Commonwealth, arresting the king Mendog III and placing Augustinas Voldemaras in charge of the nation. Voldemaras officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
+plcommon.47.a:0 "It is not our problem."
+plcommon.47.b:0 "Traitors!"
+plcommon.48.t:0 "Revenge on the Commonwealth"
+plcommon.48.d:0 "It is time to strike back at the oppressive "Commonwealth", and erase them from the map once and for all!"
+plcommon.48.a:0 "Revenge!"
+plcommon.49.t:0 "New Government"
+plcommon.49.d:0 "The LTIP Party took power in the Commonwealth and has restored Lithuania."
+plcommon.49.a:0 "Okay."
