--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -116,7 +116,7 @@ OTT_mecidian_reforms_desc:0 ""
 OTT_legal_reform:0 "Legal Reforms"
 OTT_legal_reform_desc:0 ""
 OTT_judicial_reform:0 "Judicial Reforms"
-OTT_judicial_reform_desc:0 ""
+OTT_judicial_reform_desc:0 "Judges have the ultimate responsibility for decisions regarding freedoms, rights and duties of persons within their jurisdiction. The independence of each individual judge safeguards every person’s right to have their case decided solely on the basis of the law, the evidence and facts, without any improper influence. A well-functioning, efficient and independent judiciary is an essential requirement for a fair, consistent and neutral administration of justice. Consequently, judicial independence is an indispensable element of the rule of law and democracy."
 OTT_administrative_reform:0 "Administrative Reforms"
 OTT_administrative_reform_desc:0 ""
 OTT_bureaucratic_reform:0 "Bureaucratic Reforms"
@@ -373,10 +373,9 @@ ott.28.t:0 "Kurdistan receives formal rejection!"
 ott.28.d:0 "Unbelievable! Those fascists in the Commune of France have rejected our request to join the Internationale!"
 ott.28.a:0 "Fransa bize bohmir"
 
-ott.29.t:0 "OPDA"
-ott.29.d:0 ""
-ott.29.a:0 ""
-ott.29.b:0 ""
+ott.29.t:0 "The Ottoman Public Debt Administration"
+ott.29.d:0 "Founded in 1881 the Ottoman Public Debt Administration (OPDA) was an European-controlled organisation that monitored and collected debt owed by the Ottoman State to European creditors in the private and public sectors. Most of the debt had been owed to French and British government as well as private institutions and had, as a consequence, been unilaterally defaulted by the Ottoman government when revolution swept away the regimes in London and Paris. However, the OPDA is still in existence and is now fully controlled by German and Austrian administrators, mainly concerned with regaining the capital loaned to Kostantiniyye during the Weltkrieg."
+ott.29.a:0 "With friends such as these..."
 
 ott.30.t:0 "Dissatisfaction in Hejaz"
 ott.30.d:0 "Increasing levels of Arab nationalism is spreading dissatisfaction among our subjects. The independent state of Hejaz is a constant symbol of freedom from control of Kostantiniyye. How shall we deal with these dissenting elements in our diverse Empire?"
@@ -658,7 +657,7 @@ ott.90.a:0 "What are you waiting for? Swear them in!"
 ott.90.b:0 "Supress the malcontents by force of arms!"
 
 ott.91.t:0 "Mob violence erupts in Kostantiniyye"
-ott.91.d:0 "General unrest has turned into rioting and mob rule in our capital! Various left-wing groups were spotted among the rioters as protesters started damaging public buildings and clashed with the security forces. As the initially civil protests quickly deteriorated into anarchy and vandalism, they began to lose their support among the conservative sections of the Ottoman public. Reports of drunk rebels loitering near the Dolmabahçe Palace and its attached Mosque were quickly publicised by pro-government newspapers."
+ott.91.d:0 "General unrest has turned into rioting and mob rule in our capital! Various left-wing groups were spotted among the rioters as protesters clashed with the security forces and started damaging public buildings. As the initially civil protests quickly deteriorated into vandalism and anarchy, they began to lose their support among the conservative sections of the Ottoman public. Reports of inebriated rebels loitering near the Dolmabahçe Palace and its attached Mosque were quickly publicised by pro-government newspapers."
 ott.91.a:0 "Those drunks entered the mosque with their shoes on!"
 
 ott.92.t:0 "Prince Sabahaddin Agitates!"
@@ -671,7 +670,7 @@ ott.93.d:0 "Opposition politicians appear to have succeeded in their coordinated
 ott.93.a:0 "They will not halt our progress!"
 
 ott.94.t:0 "Protests calm down"
-ott.94.d:0 "Following several weeks of anarchy and rioting on the streets of Kostantiniyye, the protests eventually died down. While the damage to public buildings and services were minimal, the damage to the credibility of the protesters was immense. The conservative Ottoman public, always wary of chaos and instability, had chosen to side with the Sultan. As a new era dawned on The Ottoman Empire, Sultan [Root.GetLeader] stood strong with the support of the majority behind him."
+ott.94.d:0 "Following several weeks of anarchy and rioting on the streets of Kostantiniyye, the protests eventually died down. While damage to public buildings and services were minimal, damage to the credibility of the protesters was immense. The conservative Ottoman public, always wary of chaos and instability, had chosen to side with the Sultan. As a new era dawned on The Ottoman Empire, Sultan [Root.GetLeader] stood strong with the support of the majority behind him."
 ott.94.a:0 "We will have order in our Empire!"
 
 ott.95.t:0 ""
@@ -718,45 +717,57 @@ ott.105.t:0 ""
 ott.105.d:0 ""
 ott.105.a:0 ""
 
-ott.106.t:0 ""
-ott.106.d:0 ""
-ott.106.a:0 ""
+ott.106.t:0 "Independence of the Judiciary"
+ott.106.d:0 "Our chief legal experts argue that in the decision-making process, judges should have freedom to decide cases impartially, in accordance with their interpretation of the law and the facts; that they should be able to act without any restriction or improper influence. They claim that one of the most important standards underpinning the autonomy of the judiciary is irremovability, that is, for ordinary judges to be appointed permanently until retirement. Shall we give such guarantees of independence to our judges?"
+ott.106.a:0 "We must ensure the independence of our Judiciary"
+ott.106.b:0 "They shall have parliamentary oversight"
+ott.106.c:0 "I am the law"
 
-ott.107.t:0 ""
-ott.107.d:0 ""
-ott.107.a:0 ""
+ott.107.t:0 "Centralisation or Decentralisation?"
+ott.107.d:0 "While the Article 108 of the Ottoman Constitution declares that the vilayets shall be governed by the principle of 'decentralisation', this de jure principle has never transformed into action. Now that our sweeping administrative reforms are underway, the proponents of the doctrine of 'Adem-i Merkeziyet' are again asserting that subordinating local decision-making to the central bureaucracy results in tremendous inefficiency and pointless delays. With our distant subjects chafing under the direct rule of Kostantiniyye, it would be wise to grant more power to local governments over our centrally-appointed governors. Shall we grant greater powers and freedoms to the administrative councils of our Vilayets?"
+ott.107.a:0 "More power to the local governments!"
+ott.107.b:0 "Frankly, I don't see the need for reform"
 
-ott.108.t:0 ""
-ott.108.d:0 ""
-ott.108.a:0 ""
+ott.108.t:0 "Indifference to New Laws"
+ott.108.d:0 "Even though we made many changes to administrative law during the course of legal reforms, we are receiving numerous reports of regulators and bureaucrats completely disregarding the new laws, especially the ones concerning anti-corruption measures."
+ott.108.a:0 "What is this insolence?!"
 
-ott.109.t:0 ""
-ott.109.d:0 ""
-ott.109.a:0 ""
+ott.109.t:0 "Interference in Courts!"
+ott.109.d:0 "In former days, local administrators and military governors could freely interfere with legal proceedings, and sometimes even upturn court decisions. Such interference, coupled with corruption, quickly gave rise to injustice and public discontent. And although with our judicial reforms we aimed to prevent any such events from occuring again in the future, we are still receiving petitions from aggrieved peasants detailing high-level interference in courts of law."
+ott.109.a:0 "Who dares interrupt justice?"
 
-ott.110.t:0 ""
-ott.110.d:0 ""
-ott.110.a:0 ""
+ott.110.t:0 "Ineffective Administration"
+ott.110.d:0 "It has been several months since we formally adopted the metric system and the Standard Ottoman script, but we are still receiving troubling reports of incompetent bureaucrats being completely unable to use the new standards of measurement, and dozens of nearly-illiterate government officials have been discovered after they have proved incapable of deciphering the new form of official writing. It appears that the full implementation of these reforms will take more time than anticipated."
+ott.110.a:0 "Who hired all these useless officials?!"
 
-ott.111.t:0 ""
-ott.111.d:0 ""
-ott.111.a:0 ""
+ott.111.t:0 "Corrupt Bureaucracy"
+ott.111.d:0 "The notoriously widespread corruption in the Ottoman bureaucracy is a long-established phenomenon. Over the centuries, low wages and even lower moral standards of Ottoman government officials resulted in the gradual acceptance and normalisation of bribery as a means of income. Legitimized under terms such as 'hediye' and 'caize', corruption became so commonplace that several Ottoman sultans were recorded to have accepted bribes. Many efforts to curtail corruption were made over the centuries, none of them successful. Unfortunately, it appears that our coordinated efforts to end bribery are about to meet the same fate. The reforms we instituted, which include new laws and severe penalties, are being casually disregarded by the old-headed bureaucrats, almost all of whom are feeling quite secure in their entrenched positions in the government. Several reports we have received indicate that any action taken against these corrupt officials are quickly covered-up by complicit superiors and high officials. It appears that eliminating corruption will not be an easy task."
+ott.111.a:0 "Reinstitute the anti-bribery oath!"
 
-ott.112.t:0 ""
-ott.112.d:0 ""
-ott.112.a:0 ""
+ott.112.t:0 "Report on Corrupion"
+ott.112.d1:0 ""
+ott.112.d2:0 ""
+ott.112.a:0 "I want action on this!"
+ott.112.b:0 "Let it slide, this is too dangerous"
 
-ott.113.t:0 ""
-ott.113.d:0 ""
-ott.113.a:0 ""
+ott.113.t:0 "Head of Police murdered!"
+ott.113.d1:0 ""
+ott.113.d2:0 ""
+ott.113.a:0 "Issue arrests!"
+ott.113.b:0 "You have my full support"
+ott.113.c:0 "Forgive offenders, end the investigation"
 
-ott.114.t:0 ""
-ott.114.d:0 ""
-ott.114.a:0 ""
+ott.114.t:0 "Arrests lead to high officials"
+ott.114.d1:0 ""
+ott.114.d2:0 ""
+ott.114.a:0 "Make no exceptions!"
+ott.114.b:0 "Forgive offenders, end the investigation"
 
-ott.115.t:0 ""
-ott.115.d:0 ""
-ott.115.a:0 ""
+ott.115.t:0 "Evidence points to Teceddüt Fırkası"
+ott.115.d1:0 ""
+ott.115.d2:0 ""
+ott.115.a:0 "Bring them to justice!"
+ott.115.b:0 "Forgive all offenders, end the investigation"
 
 ott.116.t:0 ""
 ott.116.d:0 ""
@@ -877,6 +888,9 @@ ott.144.a:0 ""
 ott.145.t:0 ""
 ott.145.d:0 ""
 ott.145.a:0 ""
+ott.145.b:0 ""
+ott.145.c:0 ""
+ott.145.e:0 ""
 
 ott.146.t:0 ""
 ott.146.d:0 ""
@@ -950,58 +964,63 @@ ott.163.t:0 ""
 ott.163.d:0 ""
 ott.163.a:0 ""
 
-ott.164.t:0 ""
-ott.164.d:0 ""
-ott.164.a:0 ""
+ott.164.t:0 "The issue of Yemen"
+ott.164.d:0 "Endless revolts in the Yemen Vilayet had forced the Ottoman Empire to negotiate the Treaty of Da'an (1911) with the Imam Yahya of Yemen. According to the treaty, the Zaydi Imam was given the power to appoint governors and judges in Shia-majority areas, as well as collect taxes from his followers, while remaining under Ottoman authority. The Ottomans still administered the Sunni areas and maintained a sizeable garrison force. Following the conclusion of the Weltkrieg, Yemen was isolated from the rest of the empire. The Zaydi Imam renewed his oath of allegiance to the Ottoman Sultan, but also extended his authority over our entire Vilayet. Now that we border Yemen once again, how shall we proceed?"
+ott.164.a:0 "Demand that Yemen acknowledge the 1911 treaty"
+ott.164.b:0 "Proceed with the invasion"
 
-ott.165.t:0 ""
-ott.165.d:0 ""
-ott.165.a:0 ""
+ott.165.t:0 "Turks demand submission!"
+ott.165.d:0 "Once again, the Turks are at our borders. After defeating the Hashemite Kingdom to the north, the Ottomans have sent a military delegation to Sana'a, demanding that we reaffirm our status as their subjects and surrender control of our provinces."
+ott.165.a:0 "We have no choice"
+ott.165.b:0 "Let them come, we fear no Turk!"
 
-ott.166.t:0 ""
-ott.166.d:0 ""
-ott.166.a:0 ""
+ott.166.t:0 "Yemen submits!"
+ott.166.d:0 "The Zaydi Imam wisely agreed to fulfill his treaty obligations. The former Yemen Vilayet is once again under our control."
+ott.166.a:0 "Great!"
 
-ott.167.t:0 ""
-ott.167.d:0 ""
-ott.167.a:0 ""
+ott.167.t:0 "Yemen resists!"
+ott.167.d:0 "The foolhardy Zaydi tribes of Yemen have refused to abide by the earlier treaty and launched attacks on our forces. Shall we begin military operations?"
+ott.167.a:0 "Send in the troops"
+ott.167.b:0 "We cannot afford another conflict in Yemen"
 
-ott.168.t:0 ""
-ott.168.d:0 ""
-ott.168.a:0 ""
+ott.168.t:0 "A Gift to the Emir of Bukhara?"
+ott.168.d:0 "Diplomatic relations between the Emirate of Bukhara and Ottoman Empire were first established in the early 1920's. In 1925, Mohammed Alim Khan of Bukhara visited Kostantiniyye to meet with Sultan Mehmed VI, and had a spectacular public fountain built in Eyüp, now known as 'Buhara Çeşmesi'. Cordial relations were maintained, but no further visits followed. Recently, as part of our diplomatic efforts to bring Turkic nations together, it was suggested that Sultan [Root.GetLeader] send a worthy gift to the Emir of Bukhara."
+ott.168.a:0 "Send a custom-made Ottoman rifle!"
+ott.168.b:0 "Bah, who cares about those lowly nomads?"
 
-ott.169.t:0 ""
-ott.169.d:0 ""
-ott.169.a:0 ""
+ott.169.t:0 "Ottoman Khan sends beautiful gift!"
+ott.169.d:0 "Today we received the ambassadors of [From.GetLeader] Khan of Ottomans, who brought with them a beautifully engraved Ottoman rifle for [Root.GetLeader]. Its master craftsmanship is evident from the solid construction and ornate exterior, fitted with intricate gold-engraved plates. The ambassadors said they wish to express the goodwill and friendship of the Ottoman Khan. How shall we respond to such a gift?"
+ott.169.a:0 "Respond with a purebred Akhal-Teke!"
+ott.169.b:0 "We don't need gifts from the filthy Oghuz!"
 
-ott.170.t:0 ""
-ott.170.d:0 ""
-ott.170.a:0 ""
+ott.170.t:0 "Emir of Bukhara sends a purebred warhorse!"
+ott.170.d:0 "Today we received a tall warhorse of glorious beauty from the Emir of Bukhara, in exchange for the custom rifle we had sent him. The ambassadors also brought a letter from [From.GetLeader], who wrote that he wished to see our blood relations be reinforced by mutual friendly relations maintained for all eternity. The shiny golden horse is named Kamarbay, and walks as if it flows through the air. Indeed, this is a gift fit for a Sultan."
+ott.170.a:0 "You have bested us in generosity, [From.GetLeader]"
 
-ott.171.t:0 ""
-ott.171.d:0 ""
-ott.171.a:0 ""
+ott.171.t:0 "Turkestan throws out our ambassadors!"
+ott.171.d:0 "My Sultan, our ambassadors have been banned! Turkestan gave us no reason why they acted the way they did. We suspect the ambitions of [From.GetLeader] are behind this!"
+ott.171.a:0 "This was not what I had expected..."
 
-ott.172.t:0 ""
-ott.172.d:0 ""
-ott.172.a:0 ""
+ott.172.t:0 "Gendarmerie captures weapons shipments"
+ott.172.d:0 "A large group of smugglers were stopped by the Ottoman Gendarmerie in the outskirts of Diyarbakır yesterday, who turned out to be transporting several thousand rifles and a large amount of explosives into the city. The weapons were of French origin, while interrogation of the smugglers revealed they had obtained the crates from syndicalists in Georgia. A large-scale investigation is currently underway."
+ott.172.a:0 "What were they planning to do with all these rifles?"
 
-ott.173.t:0 ""
-ott.173.d:0 ""
-ott.173.a:0 ""
+ott.173.t:0 "Syndicalist agents caught in Mosul"
+ott.173.d:0 "Our gendarmerie, with the aid of locals, has uncovered a network of syndicalist agents in Mosul who were allegedly arming and training militias to fight against our rule. In a series of raids 3 syndie agents were captured and important documents were discovered. It appears that Georgian and French Syndicalists are trying to organise an armed uprising in our Kurdish provinces."
+ott.173.a:0 "Preposterous!"
 
-ott.174.t:0 ""
-ott.174.d:0 ""
-ott.174.a:0 ""
+ott.174.t:0 "Ottoman traitors caught in Ağrı"
+ott.174.d:0 "During the ongoing operation against syndicalist interference in our Eastern provinces, a company-sized unit of our gendarmerie force was ambushed by Kurdish tribesmen near the Armenian border. Reinforcements from the army were quick to arrive on the scene, and the rebels were swiftly routed. While many of them managed to cross the border into Persia, our cavalry units managed to surround a small group of bandits who immediately surrendered. Among them were several Ottoman officers, including İhsan Nuri Bey. To everyone's surprise, a brief inquiry into the population records showed that these Ottoman-educated officers were not of Kurdish background, but instead had Armenian and Georgian ancestry. While it is not entirely clear why they were championing the cause of Kurdish separatism, it is evident that a wider conspiracy is at work..."
+ott.174.a:0 "Why would such groups infiltrate our military?"
 
-ott.175.t:0 ""
-ott.175.d:0 ""
-ott.175.a:0 ""
+ott.175.t:0 "Druze revolt dispersed in Syria"
+ott.175.d:0 "A large revolt of Druze tribesmen was recently crushed by our Gendarmerie. Hundreds of rebels have been killed, while the routed tribes returned to their villages and ceased their raids on our trade routes. Evidence shows that these revolts are being provoked by Hashemite agents."
+ott.175.a:0 "Such pointless waste..."
 
-ott.176.t:0 ""
-ott.176.d:0 ""
-ott.176.a:0 ""
+ott.176.t:0 "Egyptian Weapon shipments caught in Basra"
+ott.176.d:0 "Thanks to an anonymous tip, two shipping containers full of rifles were discovered in Port Basra. Originating from an Egyptian port, these containers had been brought in by a Spanish freighter. It appears that these weapons were destined for rebel groups in southern Iraq, to be used against our soldiers."
+ott.176.a:0 "We will get to the bottom of this..."
 
-ott.177.t:0 ""
-ott.177.d:0 ""
-ott.177.a:0 ""
+ott.177.t:0 "Hashemite spies caught in Damascus"
+ott.177.d:0 "Our gendarmerie, working together with local law enforcement, has managed to arrest several Hashemite spies in Damascus. Detailed military maps of the region and intelligence notes on Ottoman military strength were found in the possession of these agents. Their mission seems to be the formation of clandestine cells across Syria, which would be activated in case of war between Arabian states and the Ottoman Empire."
+ott.177.a:0 "Such scheming will not go unpunished..."
