Added plane gfx for Carlist Spain

--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1241,6 +1241,47 @@ HUN_fighter_equipment_3_short:0 "Héja II"
 SPA_fighter_equipment_2:0 "Hispano Aviación HA-1112"
 SPA_fighter_equipment_2_short:0 "HA-1112"
 
+### Carlist Spain ###
+
+CAR_CAS_equipment_1:0 "Breda Ba.64"
+CAR_CAS_equipment_1_short:0 "Ba.64"
+CAR_CAS_equipment_2:0 "Caproni Ca.307"
+CAR_CAS_equipment_2_short:0 "Ca.307"
+CAR_CAS_equipment_3:0 "Breda Ba.201"
+CAR_CAS_equipment_3_short:0 "Ba.201"
+
+CAR_heavy_fighter_equipment_1:0 "Caproni Ca.311"
+CAR_heavy_fighter_equipment_1_short:0 "Ca.311"
+CAR_heavy_fighter_equipment_2:0 "Reggiane Re.2005"
+CAR_heavy_fighter_equipment_2_short:0 "Re.2005"
+CAR_heavy_fighter_equipment_3:0 "Savoia-Marchetti SM.91"
+CAR_heavy_fighter_equipment_3_short:0 "SM.91"
+
+CAR_fighter_equipment_0:0 "Arado Ar.68"
+CAR_fighter_equipment_0_short:0 "Ar.68"
+CAR_fighter_equipment_1:0 "Fiat G.50"
+CAR_fighter_equipment_1_short:0 "G.50"
+CAR_fighter_equipment_2:0 "Ambrosini SAI.207"
+CAR_fighter_equipment_2_short:0 "SAI.207"
+CAR_fighter_equipment_3:0 "Caproni-Vizzola F.6"
+CAR_fighter_equipment_3_short:0 "F.6"
+
+CAR_nav_bomber_equipment_1:0 "CANT Z.506"
+CAR_nav_bomber_equipment_1_short:0 "Z.506"
+CAR_nav_bomber_equipment_2:0 "Caproni Ca.304"
+CAR_nav_bomber_equipment_2_short:0 "Ca.304"
+CAR_nav_bomber_equipment_3:0 "Savoia-Marchetti SM.79"
+CAR_nav_bomber_equipment_3_short:0 "SM.79"
+
+CAR_tac_bomber_equipment_0:0 "Savoia-Marchetti SM.81"
+CAR_tac_bomber_equipment_0_short:0 "SM.81"
+CAR_tac_bomber_equipment_1:0 "Caproni Ca.135"
+CAR_tac_bomber_equipment_1_short:0 "Ca.135"
+CAR_tac_bomber_equipment_2:0 "Savoia-Marchetti SM.79B"
+CAR_tac_bomber_equipment_2_short:0 "SM.79B"
+CAR_tac_bomber_equipment_3:0 "Savoia-Marchetti SM.84"
+CAR_tac_bomber_equipment_3_short:0 "SM.84"
+
 ### Sweden ###
 
 SWE_CAS_equipment_1:0 "SAAB Northrop A-17 8A-1"
